--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/piazz/untitled_camera_app#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.17.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^7.14.0",
